crates/sutura-app/tests/snapshots/web-revenue-june__rows@duckdb.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
period	web_revenue
Text(2026-06-01)	Integer(499899)
