crates/sutura-app/tests/snapshots/web-revenue-june__sql@duckdb.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) AS "period", SUM("orders"."amount_cents") AS "web_revenue" FROM "orders" WHERE "orders"."order_date" >= ? AND "orders"."order_date" < ? AND "orders"."channel" = ? GROUP BY CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) ORDER BY CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) LIMIT 10000
